# gitdocs.dev

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
gitdocs/: __init__.py  __main__.py
gitdocs/atlassian/: __init__.py  confluence_api.py  confluence_client.py  jira_api.py  jira_client.py  models.py
gitdocs/cli/: __init__.py  app.py  auth.py  docs.py  init.py  serve.py  sync.py  tickets.py
gitdocs/core/: __init__.py  app.py  config.py  errors.py  paths.py  secrets.py
gitdocs/git/: __init__.py  diff.py  repo.py
gitdocs/llm/: __init__.py  classify.py  client.py
gitdocs/store/: __init__.py  cache.py  mappings.py
gitdocs/tui/: __init__.py  main.py
gitdocs/tui/components/: __init__.py  search.py  statusbar.py
gitdocs/tui/views/: __init__.py  docs_tree.py  ticket_detail.py  tickets_tree.py
gitdocs/web/: __init__.py  routes.py  server.py
tests/: __init__.py  conftest.py  test_config.py  test_confluence.py  test_git.py  test_jira.py
